--- a/style.css
+++ b/style.css
@@ -135,6 +135,32 @@ main .info .text p#text2 {
   right: 162px;
   top: 128px;
 }
+#search-results {
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+#search-results ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#search-results li {
+    margin: 10px 0;
+}
+
+#search-results a {
+    text-decoration: none;
+    color: #0073e6;
+    font-weight: bold;
+}
+
+#search-results a:hover {
+    text-decoration: underline;
+}
 /*footer*/
 footer {
   width: 100%;
