--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ main .info .text p#text2 {
   right: 162px;
   top: 128px;
 }
-#search-results {
+body #search-results {
     background-color: #f8f8f8;
     border: 1px solid #ccc;
     padding: 20px;
@@ -143,22 +143,22 @@ main .info .text p#text2 {
     margin-top: 20px;
 }
 
-#search-results ul {
+body #search-results ul {
     list-style-type: none;
     padding: 0;
 }
 
-#search-results li {
+body #search-results li {
     margin: 10px 0;
 }
 
-#search-results a {
+body #search-results a {
     text-decoration: none;
     color: #0073e6;
     font-weight: bold;
 }
 
-#search-results a:hover {
+body #search-results a:hover {
     text-decoration: underline;
 }
 /*footer*/
