--- a/style.css
+++ b/style.css
@@ -1,124 +1,209 @@
-/* Reset 스타일 */
+/* 기존 스타일 */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Noto Serif JP", serif;
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
 }
 
-a, a:link, a:visited {
-  color: inherit;
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-/* Header */
+/* 헤더 */
 header {
   width: 100%;
+  height: 420px;
 }
-
-.header-top {
+header .header-top {
+  width: 100%;
+  height: 298px;
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff;
-  padding: 20px;
 }
 
-.logo img {
-  max-width: 100%;
-  height: auto;
-}
-
-.search {
-  display: flex;
-  align-items: center;
-}
-
-.search-text {
-  width: 200px;
-  height: 40px;
-  border: 2px solid #B7282E;
-  padding: 5px;
-  margin-right: 10px;
-}
-
-.search-btn {
-  width: 40px;
-  height: 40px;
-  background-color: #B7282E;
-  border: none;
-  cursor: pointer;
-}
-
-.search-btn img {
-  width: 20px;
-  height: 20px;
-}
-
-/* Navigation */
-nav.nav {
-  background-color: #683722;
-  border-top: 5px solid #dfca86;
-  border-bottom: 5px solid #dfca86;
-}
-
-nav.nav ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 0;
-}
-
-nav.nav ul li {
-  margin: 0 15px;
-}
-
-nav.nav ul li a {
-  color: #fff;
-  font-size: 18px;
-  padding: 10px;
-}
-
-nav.nav ul li a:hover {
-  background-color: #B7282E;
-  border-radius: 5px;
-}
-
-/* Main */
-main {
-  width: 100%;
-  background-color: #FFF8E7;
-}
-
-.info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-image: url('image/main_2.png');
+header .logo {
+  width: 634px;
+  height: 97px;
+  background-image: url('image/logo.png');
   background-size: cover;
-  height: 500px;
+  margin-top: -25px;
+  margin-left: 110px;
+}
+
+header .header-top .search {
   position: relative;
-  text-align: center;
+  right: 180px;
 }
 
-.text {
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 20px;
+header .header-top .search-text {
+  margin-right: 110px;
+  width: 348px;
+  height: 62px;
+  border: solid 5px #B7282E;
+  border-right: 0;
+  padding: 5px;
+  margin-right: 0;
+  outline: none;
+  float: left;
 }
 
-.text p {
+header .header-top .search-btn {
+  width: 62px;
+  height: 62px;
+  background-color: #B7282E;
+  background-image: url("image/search_Icon.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  float: right;
+  outline: none;
+  border: 0;
+}
+
+/* 네비게이션 */
+header .nav {
+  width: 100%;
+  height: 122px;
+  background-color: #683722;
+  border-width: 5px 0;
+  border-style: solid;
+  border-color: #dfca86;
+}
+header .nav ul {
+  height: 112px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+header .nav ul li {
   color: #fff;
   font-size: 24px;
 }
+header>.nav>ul>li::before {
+  content: "|";
+  float: left;
+  display: block;
+  margin: 0 80px;
+}
+header>.nav>ul>li:first-child::before {
+  margin-left: 0;
+}
+header>.nav>ul>li:last-child:after {
+  content: "|";
+  float: right;
+  display: block;
+  margin-left: 80px;
+}
 
-/* Footer */
+/* 메인 */
+main {
+  width: 100%;
+  height: 974px;
+  background-color: #FFF8E7;
+  position: relative;
+}
+
+main .info {
+  width: 1401px;
+  height: 729px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -364.5px 0 0 -700.5px;
+  background-image: url('image/main_2.png');
+  background-size: cover;
+}
+
+main .info .text {
+  width: 326px;
+  height: 729px;
+  position: absolute;
+  background-color: rgb(0, 0, 0, 0.5);
+  right: 0;
+}
+
+main .info .text p {
+  writing-mode: vertical-rl;
+  text-align: center;
+  color: #fff;
+  font-size: 36px;
+  position: absolute;
+}
+
+main .info .text p#text1 {
+  right: 100px;
+  top: 77px;
+}
+
+main .info .text p#text2 {
+  right: 162px;
+  top: 128px;
+}
+
+/* 푸터 */
 footer {
   width: 100%;
-  background-color: #B7282 
+  height: 137px;
+  background-color: #B7282E;
+  display: flex;
+  align-items: center;
+}
+footer p {
+  color: #fff;
+}
+footer>p:first-child {
+  margin-left: 110px;
+}
+
+/* 반응형 스타일 (모바일용) */
+@media (max-width: 768px) {
+  header .header-top {
+    flex-direction: column;
+    align-items: center;
+  }
+  header .logo {
+    width: 300px;
+    height: auto;
+    margin: 0;
+  }
+  header .header-top .search {
+    position: static;
+    width: 100%;
+    margin: 10px 0;
+  }
+  header .header-top .search-text {
+    width: 100%;
+    margin-right: 0;
+  }
+  header .header-top .search-btn {
+    width: 50px;
+    height: 50px;
+  }
+  header .nav ul {
+    flex-direction: column;
+    padding-top: 10px;
+  }
+  header .nav ul li {
+    font-size: 20px;
+    margin: 5px 0;
+  }
+  main .info {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    position: relative;
+  }
+  main .info .text {
+    width: 100%;
+    height: auto;
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  main .info .text p {
+    font-size: 24px;
+    position: relative;
+    writing-mode: horizontal-tb;
+    margin-top: 10px;
+  }
+}
