--- a/style1.css
+++ b/style1.css
@@ -122,18 +122,17 @@ background-color: #FFF8E7;
 position: relative;
 }
 
-main .info {
-  position: relative;
-  width: 100%;
-  min-height: clamp(420px, 80vh, 900px);
-  overflow: clip;
+main .info{
+width: 1401px;
+height: 729px;
+position: absolute;
+top: 50%;
+left: 50%;
+margin: -364.5px 0 0 -700.5px;
+background-image: url('image/main_2.png');
+background-size: cover;
 }
-main .info > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-}
+
 main .info .text {
 width: 326px;
 height: 729px;
