Fix brand link href in header
Corrected the href attribute for the brand link.

--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,6 @@
 <header role="banner">
   <nav class="nav" aria-label="主要ナビゲーション">
-    <div class="brand"><a href="index.html" style="text-decoration:none;color:inherit">江縫栄市立総合病院</a></div>
+    <div class="brand"><a href="index_" style="text-decoration:none;color:inherit">江縫栄市立総合病院</a></div>
     <a href="news.html">お知らせ</a>
     <a href="departments.html">診療科</a>
     <a href="access.html">アクセス</a>
