--- a/partials/header.html
+++ b/partials/header.html
@@ -2,11 +2,11 @@
   <nav class="nav" aria-label="主要ナビゲーション">
     <div class="brand"><a href="index_" style="text-decoration:none;color:inherit">江縫栄市立総合病院</a></div>
     <a href="news.html">お知らせ</a>
-    <a href="departments.html">診療科</a>
-    <a href="access.html">アクセス</a>
-    <a href="library.html">図書館</a>
-    <a href="links.html">関連情報</a>
     <a href="overview.html">病院概要</a>
+    <a href="yesican.html">お仕事</a>
+    <a href="access.html">アクセス</a>
+    <a href="prebox.html">隨ｬ4縺ｮ螢?</a>
+    <a href="links.html">関連情報</a>
     <a href="terms.html">利用規約</a>
   </nav>
 </header>
