--- a/partials/news.html
+++ b/partials/news.html
@@ -1,6 +1,6 @@
 <h1>お知らせ</h1>
 <ul class="list">
-  <li>インフルエンザ予防接種の予約受付を開始しました。</li>
-  <li>分娩立会い制限の段階的緩和について。</li>
-  <li>外来棟の耐震補強工事（夜間）のお知らせ。</li>
+  <li>譎ゅ?豬√ｌ縺碁?縺吶℃繧九</li>
+  <li>辟｡讖溽黄鬆ｭ蜒上?蛟倶ｽ薙?逧?ｧ倥∈</li>
+  <li>蜀??縺ｮ縺溘ａ縺ｮ縺雁?ｱ縺帙〒縺吶</li>
 </ul>
