--- a/partials/header.html
+++ b/partials/header.html
@@ -1,6 +1,6 @@
 <header role="banner">
   <nav class="nav" aria-label="主要ナビゲーション">
-    <div class="brand"><a href="index_" style="text-decoration:none;color:inherit">江縫栄市立総合病院</a></div>
+    <div class="brand"><a href="main" style="text-decoration:none;color:inherit">江縫栄市立総合病院</a></div>
     <a href="news.html">お知らせ</a>
     <a href="overview.html">病院概要</a>
     <a href="yesican.html">お仕事</a>
