--- a/partials/header.html
+++ b/partials/header.html
@@ -1,12 +1,12 @@
 <header role="banner">
   <nav class="nav" aria-label="主要ナビゲーション">
     <div class="brand"><a href="main" style="text-decoration:none;color:inherit">江縫栄市立総合病院</a></div>
-    <a href="https://hospinfo-enuei-city.org/news">お知らせ</a>
-    <a href="https://hospinfo-enuei-city.org/overview">病院概要</a>
-    <a href="https://hospinfo-enuei-city.org/yesican">お仕事</a>
-    <a href="https://hospinfo-enuei-city.org/access">アクセス</a>
-    <a href="https://hospinfo-enuei-city.org/prebox">隨ｬ4縺ｮ螢?</a>
-    <a href="https://hospinfo-enuei-city.org/links">関連情報</a>
-    <a href="https://hospinfo-enuei-city.org/terms">利用規約</a>
+    <a href="https://gainenull.org/news">お知らせ</a>
+    <a href="https://gainenull.org/news">病院概要</a>
+    <a href="https://gainenull.org/news">お仕事</a>
+    <a href="https://gainenull.org/news">アクセス</a>
+    <a href="https://gainenull.org/news">隨ｬ4縺ｮ螢?</a>
+    <a href="https://gainenull.org/news">関連情報</a>
+    <a href="https://gainenull.org/news">利用規約</a>
   </nav>
 </header>
