--- a/partials/header.html
+++ b/partials/header.html
@@ -3,7 +3,7 @@
     <div class="brand"><a href="main" style="text-decoration:none;color:inherit">江縫栄市立総合病院</a></div>
     <a href="https://gainenull.org/news">お知らせ</a>
     <a href="https://gainenull.org/yesican">お仕事</a>
-    <a href="https://gainenull.org/hours">外来方法</a>
+    <a href="https://gainenull.org/hours">外来案内</a>
     <a href="https://gainenull.org/terms">利用規約</a>
     <a href="https://gainenull.org/yesican">お仕事</a>
     <a href="https://gainenull.org/access">アクセス</a>
