--- a/partials/header.html
+++ b/partials/header.html
@@ -7,6 +7,7 @@
     <a href="https://gainenull.org/terms">利用規約</a>
     <a href="https://gainenull.org/access">アクセス</a>
     <a href="https://gainenull.org/prebox">隨ｬ4縺ｮ螢?</a>
+    <a href="https://gainenull.org/utamihon">歌見本</a>
     <a href="https://gainenull.org/links">関連情報</a>
   </nav>
 </header>
