--- a/partials/header.html
+++ b/partials/header.html
@@ -2,6 +2,7 @@
   <nav class="nav" aria-label="主要ナビゲーション">
     <div class="brand"><a href="main" style="text-decoration:none;color:inherit">江縫栄市立総合病院</a></div>
     <a href="https://gainenull.org/news">お知らせ</a>
+    <a href="https://gainenull.org/overviews">施設概要</a>
     <a href="https://gainenull.org/yesican">お仕事</a>
     <a href="https://gainenull.org/hours">外来案内</a>
     <a href="https://gainenull.org/terms">利用規約</a>
