Add script tag for common.js in footer

--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,3 +1,4 @@
 <footer class="footer">
   <div class="inner">© 2011 CU1000 N/A City General Hospital, All rights reserved.　本ページはフィクションです。</div>
+  <script src="common.js"></script>
 </footer>
