--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="footer">
-  <div class="inner">© 2011 CU1000 N/A City General Hospital, All rights reserved.　本ページはフィクションです。</div>
+  <div class="inner">© 2011 CU1000 N/A City General Hospital, All rights reserved.　本サイトは一部フィクション……です。</div>
 </footer>
